src/main/java/com/example/error/ValidationException.java
package com.example.error;

public class ValidationException extends Exception {
    public ValidationException(String message) {
        super(message);
    }
}
